--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <div class="container">
     <h1>Pendaftaran</h1>
     <div style="font-size:1.3em; color:#d80000; font-weight:bold; margin-bottom:14px;">
-      IKSPI Kera Sakti<br>Sub Ranting Bandar Lor
+      IKSPI Kera Sakti<br>Sub. Ranting Bandar Lor
     </div>
     <form action="https://formspree.io/f/xdkdlklb" method="POST">
       <label for="nama">Nama Lengkap</label>
@@ -175,36 +175,37 @@
 
   <!-- Informasi Tambahan -->
   <div class="info-section">
-    <h2>🌟 Informasi Latihan & Nilai-nilai Perguruan 🌟</h2>
+    <h2> Informasi Latihan</h2>
 
-    <div class="info-highlight">🕒 Jadwal Latihan</div>
+    <div class="info-highlight">Jadwal Latihan</div>
     <ul>
       <li><strong>Hari:</strong> Senin & Rabu</li>
       <li><strong>Waktu:</strong> Pukul 18.00 WIB sampai selesai</li>
       <li><strong>Tempat:</strong> Lapangan Golusia, Perum Candra Kirana</li>
     </ul>
 
-    <div class="info-highlight">🥋 Materi yang Diajarkan</div>
+    <div class="info-highlight"> Materi yang Diajarkan</div>
     <ul>
-      <li>Seni Beladiri & Kungfu IKSPI Kera Sakti</li>
-      <li>Pembinaan Kerohanian dan Mental</li>
+      <li>Seni Beladiri Silat & Kungfu </li>
+       <li>Kerohanian dan Mental</li>
+       <li>Pernafasan</li>
       <li>Disiplin, Sopan Santun, dan Etika Perguruan</li>
       <li>Pemahaman Arti Kebersamaan & Kekeluargaan</li>
       <li>Pengembangan Bakat dan Pembinaan Atlit</li>
     </ul>
 
-    <div class="info-highlight">📌 Persyaratan Pendaftaran</div>
+    <div class="info-highlight"> Persyaratan Pendaftaran</div>
     <ul>
       <li>Niat yang sungguh-sungguh untuk belajar</li>
       <li>Mendapatkan izin dari orang tua/wali</li>
       <li>Siap menjalankan peraturan yang berlaku di perguruan</li>
     </ul>
 
-    <p style="text-align:center; margin-top:24px; font-weight:bold;">
-       💥<br>
-      Latihan, Persaudaraan, dan Prestasi menantimu! 🐒🔥
+    <p style="text-align:center; margin-top:24px; font-weight:bold;"> <br>
+            🔥 SUB. RANTING BANDAR LOR 🔥
     </p>
   </div>
 </body>
 </html>
+
 
